--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Notes"
         tools:targetApi="31">
         <activity
+            android:name=".view.CreditsView"
+            android:exported="false" />
+        <activity
+            android:name=".view.ViewActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.AddNoteActivity"
             android:exported="false" />
         <activity
